Fix descriptions and indendations in Jenkinsfile

--- a/FlaskApp/templates/home.html
+++ b/FlaskApp/templates/home.html
@@ -8,8 +8,9 @@
     {% extends "template.html" %}
     {% block content %}
     
-    <h1> Spinnaker Test </h1>
-    <p> Test no: 1 </p>
+    <h1> Spinnaker </h1>
+    <h2> Cloud Native Continuous Delivery Platform </h2>
+    <p> Fast, safe, repeatable deployments for every Enterprise </p>
     
     {% endblock %}
   </body>
