--- a/FlaskApp/templates/about.html
+++ b/FlaskApp/templates/about.html
@@ -9,7 +9,7 @@
     {% block content %}
     
     <h1> About Spinnaker </h1>
-    <p> Spinnaker is a open source multi cloud continuous delivery platform that helps to release software changes.</p>
+    <h2> Spinnaker is a open source multi cloud continuous delivery platform that helps to release software changes.</h2>
     <p> Developed Netflix. It enables teams to automate deployments across multiple cloud accounts and regions even accross multiple cloud platforms, into coherent pipelines that run forever whenever a new version in released. Netflix deployed its first microservice to the cloud in 2009.</p>
       
     {% endblock %}
